--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,7 +28,7 @@
 
     <!-- Créer le composant titre par defaut -->
     <style name="TitleTextStyle" parent="SubtitleTextStyle">
-        <item name="android:textColor">@color/darkGray</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
 </resources>
