--- a/app/src/main/res/values/demens.xml
+++ b/app/src/main/res/values/demens.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <!-- Mes dimentions personalisées -->
+    <dimen name="default_margin">20dp</dimen>
+</resources>
