add framelayout for fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,11 @@
         app:layout_constraintStart_toStartOf="@+id/app_title"
         app:layout_constraintTop_toBottomOf="@+id/app_title" />
 
+    <!-- Fragment  => Boîte pour contenir les éléments-->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
