--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <!-- Insersion des images -->
-    <ImageView
+    <!--<ImageView
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:src="@drawable/trending1" />
@@ -18,6 +19,12 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="200dp"
-        android:src="@drawable/trending3" />
+        android:src="@drawable/trending3" />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
