add image sample and its properties

--- a/app/src/main/res/layout/item_horizontal_plant.xml
+++ b/app/src/main/res/layout/item_horizontal_plant.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+    <!-- Model pour les images -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/trending1" />
 
 </LinearLayout>
