--- a/app/src/main/res/layout/item_horizontal_plant.xml
+++ b/app/src/main/res/layout/item_horizontal_plant.xml
@@ -6,6 +6,7 @@
 
     <!-- Model pour les images -->
     <ImageView
+        android:id="@+id/image_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/trending1" />
