--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
         android:src="@drawable/trending3" />-->
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/horizontal_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:orientation="horizontal"
