--- a/app/src/main/res/layout/item_horizontal_plant.xml
+++ b/app/src/main/res/layout/item_horizontal_plant.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="150dp"
     android:layout_height="match_parent">
@@ -11,4 +11,4 @@
         android:layout_height="match_parent"
         android:src="@drawable/trending1" />
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
