--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,13 +28,14 @@
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    // Dernières plantes
+    <!-- Dernières plantes -->
+
     <TextView
+        style="@style/SubtitleTextStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/home_page_last_plant_section"
-        android:layout_marginTop="@dimen/default_margin"
         android:layout_marginLeft="@dimen/default_margin"
-        style="@style/SubtitleTextStyle"/>
+        android:layout_marginTop="@dimen/default_margin"
+        android:text="@string/home_page_last_plant_section" />
 
 </LinearLayout>
