add styles to the cardview

--- a/app/src/main/res/layout/item_vertical_plant.xml
+++ b/app/src/main/res/layout/item_vertical_plant.xml
@@ -10,7 +10,9 @@
         android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp" >
 
         <!-- Incersion image -->
         <ImageView
