--- a/app/src/main/res/layout/item_vertical_plant.xml
+++ b/app/src/main/res/layout/item_vertical_plant.xml
@@ -6,22 +6,40 @@
 
     <!--  CardView pour la plante  -->
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- Incersion image -->
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/trending1"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/trending1" />
 
     </androidx.cardview.widget.CardView>
 
+    <!--  -->
+    <View
+        android:id="@+id/view_separation"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/darkGreen"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        style="@style/SubtitleTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/item_margin"
+        android:text="@string/item_plant_name"
+        app:layout_constraintBottom_toTopOf="@+id/view_separation"
+        app:layout_constraintStart_toEndOf="@+id/cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
