--- a/app/src/main/res/layout/item_vertical_plant.xml
+++ b/app/src/main/res/layout/item_vertical_plant.xml
@@ -33,7 +33,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <!-- Nom de la plante-->
     <TextView
+        android:id="@+id/textView"
         style="@style/SubtitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,5 +43,14 @@
         android:text="@string/item_plant_name"
         app:layout_constraintBottom_toTopOf="@+id/view_separation"
         app:layout_constraintStart_toEndOf="@+id/cardView" />
+
+    <!-- Description de la plante-->
+    <TextView
+        style="@style/DefaultTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/item_plant_description"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/view_separation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
