--- a/app/src/main/res/layout/item_vertical_plant.xml
+++ b/app/src/main/res/layout/item_vertical_plant.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/darkGreen"
+        android:visibility="invisible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -52,5 +53,15 @@
         android:text="@string/item_plant_description"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/view_separation" />
+
+    <!-- La petite étoile -->
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_unlike"
+        android:layout_marginRight="@dimen/default_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
