--- a/app/src/main/res/layout/item_vertical_plant.xml
+++ b/app/src/main/res/layout/item_vertical_plant.xml
@@ -17,6 +17,7 @@
 
         <!-- Incersion image -->
         <ImageView
+            android:id="@+id/image_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
@@ -36,7 +37,7 @@
 
     <!-- Nom de la plante-->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/name_item"
         style="@style/SubtitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,15 +48,17 @@
 
     <!-- Description de la plante-->
     <TextView
+        android:id="@+id/description_item"
         style="@style/DefaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/item_plant_description"
-        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/name_item"
         app:layout_constraintTop_toBottomOf="@+id/view_separation" />
 
     <!-- La petite étoile -->
     <ImageView
+        android:id="@+id/star_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_unlike"
