--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,14 +30,13 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <!-- Dernières plantes -->
-
     <TextView
-        style="@style/SubtitleTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/default_margin"
         android:layout_marginTop="@dimen/default_margin"
-        android:text="@string/home_page_last_plant_section" />
+        android:text="@string/home_page_last_plant_section"
+        style="@style/SubtitleTextStyle" />
 
     <!-- RecycleView vertical des derinères plantes -->
     <androidx.recyclerview.widget.RecyclerView
