--- a/app/src/main/res/layout/item_horizontal_plant.xml
+++ b/app/src/main/res/layout/item_horizontal_plant.xml
@@ -15,5 +15,14 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/trending1" />
+    
+    <!-- Petite étoile de like -->
+    <ImageView
+        android:id="@+id/star_icon"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_margin="@dimen/default_margin"
+        android:src="@drawable/ic_star"
+        app:tint="@color/green"/>
 
 </androidx.cardview.widget.CardView>
