--- a/app/src/main/res/layout/item_horizontal_plant.xml
+++ b/app/src/main/res/layout/item_horizontal_plant.xml
@@ -21,7 +21,7 @@
         android:id="@+id/star_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_margin="@dimen/default_margin"
+        android:layout_margin="10dp"
         android:src="@drawable/ic_star"
         app:tint="@color/green"/>
 
