--- a/app/src/main/res/layout/item_horizontal_plant.xml
+++ b/app/src/main/res/layout/item_horizontal_plant.xml
@@ -22,6 +22,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="10dp"
+        android:focusable="true"
+        android:clickable="true"
         android:src="@drawable/ic_star"
         app:tint="@color/green"/>
 
