--- a/app/src/main/res/layout/popup_plants_details.xml
+++ b/app/src/main/res/layout/popup_plants_details.xml
@@ -68,4 +68,25 @@
         app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_title"
         style="@style/DefaultTextStyle"/>
 
+    <!-- Croissance de la plante -->
+    <TextView
+        android:id="@+id/popup_plant_grow_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/popup_plant_grow_title"
+        android:layout_marginTop="@dimen/default_margin"
+        style="@style/TitleTextStyle"
+        app:layout_constraintStart_toStartOf="@+id/cardView2"
+        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_subtitle" />
+
+    <TextView
+        android:id="@+id/popup_plant_grow_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/popup_plant_grow_subtitle"
+        app:layout_constraintStart_toStartOf="@+id/cardView2"
+        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_title"
+        style="@style/DefaultTextStyle"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
