--- a/app/src/main/res/layout/popup_plants_details.xml
+++ b/app/src/main/res/layout/popup_plants_details.xml
@@ -109,4 +109,15 @@
         app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_title" />
 
 
+
+    <!-- Séparateur pour bien placer les dexu buttons -->
+    <View
+        android:id="@+id/view_separation"
+        android:layout_width="2dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_subtitle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
